# sonic-channel

./: .gitignore  Cargo.toml  README.md  docker-compose.test.yml  flake.nix  sonic.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml
src/: channel.rs  channels.rs  commands.rs  errors.rs  lib.rs  macroses.rs  main.rs  misc.rs  protocol.rs  result.rs
src/channels/: control.rs  ingest.rs  mod.rs  search.rs
src/commands/: count.rs  flush.rs  list.rs  mod.rs  ping.rs  pop.rs  push.rs  query.rs  quit.rs  start.rs  suggest.rs  trigger.rs
tests/: common.rs  list_command.rs  push_command.rs  query_command.rs  suggest_command.rs
