[package]
name = "sonic-channel"
version = "0.1.0-rc1"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.4"

[features]
default = ["search"]

ingest = []
search = []
control = []
