[package]
name = "sonic-channel"
version = "0.3.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "Rust client for sonic search backend"
categories = ["api-bindings"]
keywords = ["sonic", "search", "client", "elasticsearch", "api"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/pleshevskiy/sonic-channel"
homepage = "https://github.com/pleshevskiy/sonic-channel"
documentation = "https://docs.rs/sonic-channel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.4"

[features]
default = ["search"]

ingest = []
search = []
control = []


[badges]
maintenance = { status = "actively-developed" }

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true
